--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -175,6 +175,81 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 input[type=number] { -moz-appearance:textfield; }
+/* End */
+
+/* Clases para las Sweet Alerts Toastr */
+
+.colored-toast.swal2-icon-success {
+    background-color: rgb(210, 235, 210) !important;
+    color: rgb(67, 134, 67) !important;
+    padding: 8px !important;
+    box-shadow: 0px 0px 0px #000000 !important;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+
+.colored-toast.swal2-icon-error {
+    background-color: rgb(245, 199, 199) !important;
+    color: rgb(206, 73, 73) !important;
+    padding: 8px !important;
+	box-shadow: 0px 0px 0px #000000 !important;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+
+.colored-toast.swal2-icon-warning {
+    background-color: #f8bb86 !important;
+    padding: 8px !important;
+	box-shadow: 0px 0px 0px #000000 !important;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+
+.colored-toast.swal2-icon-info {
+    background-color: rgb(198, 227, 255) !important;
+    color:  rgb(0, 113, 227) !important;
+    padding: 8px !important;
+	box-shadow: 0px 0px 0px #000000 !important;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+
+.colored-toast.swal2-icon-question {
+    background-color: #87adbd !important;
+    padding: 8px !important;
+	box-shadow: 0px 0px 0px #000000 !important;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+
+/* .colored-toast .swal2-title {
+    color: white;
+} */
+
+.colored-toast .swal2-close {
+    color: white;
+}
+
+.colored-toast .swal2-html-container {
+    color: white;
+}
+
+/* End */
 
 @media (max-width: 476px){
     
