--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url('../img/background.svg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .color-primario {
     background-color: rgb(31,41,55);
     color: white;
