--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../img/background.svg');
+    background-image: url('../img/background3.svg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
