--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -91,30 +91,29 @@
 }
 
 /* Works on Firefox */
-* {
+/* * {
     scrollbar-width: thin;
     scrollbar-color: rgb(156, 156, 156) rgba(255, 166, 0, 0);
-}
+} */
 
 /* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
+/* *::-webkit-scrollbar {
     width: 7px;
 }
 
 *::-webkit-scrollbar-track {
     background: rgba(197, 197, 197, 0);
-}
+} */
 
-*::-webkit-scrollbar-thumb {
+/* *::-webkit-scrollbar-thumb {
     background-color:  rgb(156, 156, 156);
     border-radius: 20px;
-    /* border: 3px solid orange; */
-}
+} */
 
-*::-webkit-scrollbar:horizontal {
+/* *::-webkit-scrollbar:horizontal {
     height: 5px;
     width: 5px;
-}
+} */
 
 /* Button color */
 .blue-color {
